--- a/index.html
+++ b/index.html
@@ -4,26 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Good Kitty</title>
+    <title>A day with Kitty</title>
     <link rel="stylesheet" href="./style/style.css">
     <script type="module" src="./js/index.js"></script>
 </head>
 <body>
 
+    <div class="container-all">
+        
+        <header>
+            <div class="cat-head-container">
+                <img src="./style/img/catface_noeyes.svg" alt="">
+                <div class="eye cat-eye">
+                    <div class="cat-pupil pupil-left"></div>
+                </div>
+                <div class="eye cat-eye2">
+                    <div class="cat-pupil pupil-right"></div>
+                </div>
+            </div>
+            <div class="title-container">
+                <img class="title" src="./style/img/Homepage_Title.svg" alt="">
+            </div>
+        </header>
 
-    <div class="cat-head-container">
-        <img src="./style/img/catface_noeyes.svg" alt="">
-        <div class="cat-eye-container">
-            <div class="cat-eye">
-                <div class="cat-pupil"></div>
+        <main class="buttons-container">
+            <div class="button-container">
+                <div class="hide svg" id="svg"></div>
+                <span>cat</span>
+                <span>snake</span>
             </div>
-        </div>
-        <div class="cat-eye-container2">
-            <div class="cat-eye2">
-                <div class="cat-pupil"></div>
+            <div class="button-container">
+                <div class="hide svg" id="svg"></div>
+                <span>get'em</span>
+                <span>treats</span>
             </div>
-        </div>
+        </main>
     </div>
-   
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.6/lottie.min.js" integrity="sha512-BB7rb8ZBAxtdJdB7nwDijJH9NC+648xSzviK9Itm+5APTtdpgKz1+82bDl4znz/FBhd0R7pJ/gQtomnMpZYzRw==" crossorigin="anonymous"></script>
 </body>
 </html>
