--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A day with Kitty</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="./style/style.css">
     <script type="module" src="./js/index.js"></script>
 </head>
-<body>
-
+<body>  
+    
     <div class="container-all">
-        
+        <div class="audio">
+            <audio autoplay id="player" src="./style/music/ColdYouthNearby.mp3"></audio>
+            <i id="play" onclick="document.getElementById('player').play()" class="far fa-play-circle"></i>
+            <i id="pause" onclick="document.getElementById('player').pause()" class="far fa-pause-circle"></i>
+        </div>
         <header>
             <div class="cat-head-container">
                 <img src="./style/img/catface_noeyes.svg" alt="">
