--- a/catSnake.html
+++ b/catSnake.html
@@ -9,10 +9,22 @@
     <script type="module" src="./js/catSnake.js"></script>
 </head>
 <body>
-    
+
     <div class="container-all">
-        <div id="game-board">
-            <div class="tile"></div>
+        <div class="container-elements">
+            <aside class="left-elements">
+                <a href="">
+                    <div class="arrow-container">
+                        <img src="./style/img/return-arrow.svg" alt="">
+                    </div>
+                </a>
+                <p>cat snake</p>
+            </aside>
+            <div id="game-board"></div>
+            <aside class="right-elements">
+                <p><span>0</span>/30</p>
+                <p>fish found</p>
+            </aside>
         </div>
     </div>
 
