--- a/catSnake.html
+++ b/catSnake.html
@@ -13,14 +13,37 @@
     <div class="container-all">
         <div class="container-elements">
             <aside class="left-elements">
-                <a href="">
+                <a href="./index.html">
                     <div class="arrow-container">
                         <img src="./style/img/return-arrow.svg" alt="">
                     </div>
                 </a>
                 <p>cat snake</p>
             </aside>
-            <div id="game-board"></div>
+
+            <div id="game-board">
+                <div id="intro-game" class="intro-game">
+                    <p>catch all the<br>fish without<br>bumping into a wall!</p>
+                    <img src="./style/img/Keyboard_4directions.svg" alt="">
+                    <p>use your keyboard<br>arrows to navigate</p>
+                    <button class="link-style" id="start" href="">start</button>
+                </div>
+
+                <div id="lose-container" class="lose-container hide">
+                    <p>oh no... <br> kitty so <br> sad now</p>
+                    <a class="link-style" id="restart" href="./catSnake.html">restart</a>
+                    <a class="link-style" id="back-home" href="./index.html">back to home</a>
+                </div>
+
+                <div id="win-container" class="lose-container hide">
+                    <p>happy kitty <br> fuck yeah! <br></p>
+                    <a class="link-style" id="restart" href="">go to home</a>
+                    <a class="link-style" id="back-home" href="./catSnake.html">i wanna play again</a>
+                </div>
+            </div>
+
+
+
             <aside class="right-elements">
                 <p><span>0</span>/30</p>
                 <p>fish found</p>
