finished snake, still need to set query params

--- a/catSnake.html
+++ b/catSnake.html
@@ -31,21 +31,21 @@
 
                 <div id="lose-container" class="lose-container hide">
                     <p>oh no... <br> kitty so <br> sad now</p>
-                    <a class="link-style" id="restart" href="./catSnake.html">restart</a>
-                    <a class="link-style" id="back-home" href="./index.html">back to home</a>
+                    <button class="link-style restart" id="lose-restart">restart</button>
+                    <a class="link-style" id="lose-home" href="./index.html">back to home</a>
                 </div>
 
                 <div id="win-container" class="lose-container hide">
                     <p>happy kitty <br> fuck yeah! <br></p>
-                    <a class="link-style" id="restart" href="">go to home</a>
-                    <a class="link-style" id="back-home" href="./catSnake.html">i wanna play again</a>
+                    <a class="link-style" id="win-home" href="./index.html">go to home</a>
+                    <button class="link-style restart" id="win-restart">i wanna play again</button>
                 </div>
             </div>
 
 
 
             <aside class="right-elements">
-                <p><span>0</span>/30</p>
+                <p><span>0</span>/25</p>
                 <p>fish found</p>
             </aside>
         </div>
