done with setting query params

--- a/index.html
+++ b/index.html
@@ -33,16 +33,20 @@
         </header>
 
         <main class="buttons-container">
-            <div class="button-container">
+            <a id="cat-snake-btn" class="button-container" href="./catSnake.html">
+                <div id="bossed" class="bossed hide">
+                    <img src="./style/img/bossdit.svg" alt="crown because you won catSnake game">
+                    <p>boss'd</p>
+                </div>
                 <div class="hide svg" id="svg"></div>
                 <span>cat</span>
                 <span>snake</span>
-            </div>
-            <div class="button-container">
+            </a>
+            <a id="get-em-btn" class="button-container">
                 <div class="hide svg" id="svg"></div>
                 <span>get'em</span>
                 <span>treats</span>
-            </div>
+            </a>
         </main>
     </div>
 
