almost done on get'em treats game

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <span>cat</span>
                 <span>snake</span>
             </a>
-            <a id="get-em-btn" class="button-container">
+            <a id="get-em-btn" class="button-container" href="./getEm.html">
                 <div class="hide svg" id="svg"></div>
                 <span>get'em</span>
                 <span>treats</span>
