--- a/getEm.html
+++ b/getEm.html
@@ -22,7 +22,7 @@
             </aside>
 
             <div id="game-board">
-                <div id="intro-game" class="intro-game hide">
+                <div id="intro-game" class="intro-game">
                     <p>catch all the<br>fish but avoid<br>the raindrops!</p>
                     <img src="./style/img/Keyboard_2directions.svg" alt="">
                     <p>use your keyboard<br>arrows to navigate</p>
@@ -44,12 +44,12 @@
 
 
 
-            <!-- <aside class="right-elements">
+            <aside class="right-elements">
                 <p><span>0</span>/20</p>
                 <p>treats <br>caught</p>
                 <p><span>0</span>/5</p>
                 <p>raindrops <br>caught</p>
-            </aside> -->
+            </aside>
         </div>
     </div>
 
