--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A day with Kitty</title>
+    <link rel="icon" href="./style/img/favicon.ico"/>
     <link rel="stylesheet" href="./style/style.css">
     <script type="module" src="./js/index.js"></script>
 </head>
@@ -12,9 +13,9 @@
     
     <div class="container-all">
         <div class="audio">
-            <audio id="player" src="./style/music/ColdYouthNearby.mp3"></audio>
-            <button id="play" onclick="document.getElementById('player').play()"><img src="./style/img/Play_icon.svg" alt=""></button>
-            <button id="pause" onclick="document.getElementById('player').pause()"><img src="./style/img/Pause_icon.svg" alt=""></button>
+            <audio autoplay loop id="background-music" src="./style/music/mitchrineko.mp3"></audio>
+            <button id="play" onclick="document.getElementById('background-music').play()"><img src="./style/img/Play_icon.svg" alt=""></button>
+            <button id="pause" onclick="document.getElementById('background-music').pause()"><img src="./style/img/Pause_icon.svg" alt=""></button>
         </div>
         <header>
             <div class="cat-head-container">
