--- a/getEm.html
+++ b/getEm.html
@@ -46,15 +46,15 @@
 
 
             <aside class="right-elements">
+                <div class="audio">
+                    <audio id="background-music" src="./style/music/mitchrineko.mp3"></audio>
+                    <button id="play" onclick="document.getElementById('background-music').play()"><img src="./style/img/Play_icon.svg" alt=""></button>
+                    <button id="pause" onclick="document.getElementById('background-music').pause()"><img src="./style/img/Pause_icon.svg" alt=""></button>
+                </div>
                 <p><span>0</span>/20</p>
                 <p>treats <br>caught</p>
                 <p><span>0</span>/5</p>
                 <p>raindrops <br>caught</p>
-                <div class="audio">
-                    <audio autoplay loop id="background-music" src="./style/music/mitchrineko.mp3"></audio>
-                    <button id="play" onclick="document.getElementById('background-music').play()"><img src="./style/img/Play_icon.svg" alt=""></button>
-                    <button id="pause" onclick="document.getElementById('background-music').pause()"><img src="./style/img/Pause_icon.svg" alt=""></button>
-                </div>
             </aside>
         </div>
     </div>
