--- a/catSnake.html
+++ b/catSnake.html
@@ -47,7 +47,7 @@
 
             <aside class="right-elements">
                 <div class="audio">
-                    <audio id="background-music" src="./style/music/mitchrineko.mp3"></audio>
+                    <audio autoplay loop id="background-music" src="./style/music/mitchrineko.mp3"></audio>
                     <button id="play" onclick="document.getElementById('background-music').play()"><img src="./style/img/Play_icon.svg" alt=""></button>
                     <button id="pause" onclick="document.getElementById('background-music').pause()"><img src="./style/img/Pause_icon.svg" alt=""></button>
                 </div>
