--- a/getEm.html
+++ b/getEm.html
@@ -42,6 +42,16 @@
                     <button class="link-style restart" id="win-restart">i wanna play again</button>
                 </div>
             </div>
+            <div id="pad-touch-container">
+                <div class="top-button">
+                    <img id="up" src="./style/img/direction_key.svg" alt="">
+                </div>
+                <div class="bottom-buttons">
+                    <img id="left" src="./style/img/direction_key.svg" alt="">
+                    <img id="down" src="./style/img/direction_key.svg" alt="">
+                    <img id="right" src="./style/img/direction_key.svg" alt="">
+                </div>
+            </div>
 
 
 
