--- a/catSnake.html
+++ b/catSnake.html
@@ -19,7 +19,7 @@
                         <img src="./style/img/return-arrow.svg" alt="">
                     </div>
                 </a>
-                <p>cat snake</p>
+                <p>Cat snake</p>
             </aside>
 
             <div id="game-board">
