--- a/getEm.html
+++ b/getEm.html
@@ -30,17 +30,91 @@
                     <button class="link-style" id="start" href="">start</button>
                 </div>
 
-                <div id="lose-container" class="lose-container hide">
-                    <p>oh no... <br> kitty so <br> sad now</p>
+                <div class="lose-container lose-1 hide">
+                    <p> You are rabies actually
+                        <br> so one drop already
+                        <br> kill you rip &#x1FAA6;
+                    </p>
                     <button class="link-style restart" id="lose-restart">restart</button>
                     <a class="link-style" id="lose-home" href="./index.html">back to home</a>
                 </div>
 
+                <div class="lose-container lose-2 hide">
+                    <p> You caught 2 drops??!
+                        <br> That's +1 couple mandi pass
+                        <br> I can use anytime &#x1f608;
+                    </p>
+                    <button class="link-style restart" id="lose-restart">restart</button>
+                    <a class="link-style" id="lose-home" href="./index.html">back to home</a>
+                </div>
+
+                <div class="lose-container lose-3 hide">
+                    <p> Sorry you lose 
+                        <br> but I love smell of
+                        <br> clean boyfriend 
+                    </p>
+                    <button class="link-style restart" id="lose-restart">restart</button>
+                    <a class="link-style" id="lose-home" href="./index.html">back to home</a>
+                </div>
+
+                <div class="lose-container lose-4 hide">
+                    <p> All this wet
+                        <br> but it's not from me &#x1f624;
+                    </p>
+                    <button class="link-style restart" id="lose-restart">restart</button>
+                    <a class="link-style" id="lose-home" href="./index.html">back to home</a>
+                </div>
+
+                <div class="lose-container lose-5 hide">
+                    <p> You lost...
+                        <br> but an everything shower sometimes
+                        <br> isn't that bad &#xe418;
+                    </p>
+                    <button class="link-style restart" id="lose-restart">restart</button>
+                    <a class="link-style" id="lose-home" href="./index.html">back to home</a>
+                </div>
+
+                <!--
                 <div id="win-container" class="lose-container hide">
-                    <p>happy kitty <br> fuck yeah! <br></p>
+                    <p>Happy Valentines Day sayang mayang &#65039;
+                    </p>
                     <a class="link-style" id="win-home" href="./index.html">go to home</a>
                     <button class="link-style restart" id="win-restart">i wanna play again</button>
                 </div>
+                -->
+                
+                <div id="win-container" class="scissors lose-container hide">
+                    <div class="envelop">
+                      <div class="envelop__front-paper"></div>
+                      <div class="envelop__back-paper"></div>
+                      <div class="envelop__up-paper js-up-paper"></div>
+                      <div class="envelop__sticker js-sticker"></div>
+                      <div class="envelop__false-sticker"></div>
+                      <div class="envelop__content js-envelop-content">
+                        <div class="love-notes">
+                          <div class="note js-note">
+                            <div class="note__text">
+                              <p>
+                                Hola amor, te quiero dar las gracias por todo, por las alegrías, por las risas, por los lindos momentos pero, también por los malos, porque aunque haya malos momentos...
+                              </p>
+                            </div>
+                          </div>
+                          <div class="note js-note">
+                            <div class="note__text">
+                              <p>quiero pasarlos contigo, luchar y superarlos juntos. La verdad eres muy importante para mi, amo lo que tenemos juntos y sé que podemos mejorar y mantenerlo si los dos queremos y créeme que yo quiero.</p>
+                            </div>
+                          </div>
+                          <div class="note js-note">
+                            <div class="note__text">
+                              <p>En verdad te amo y se que podemos lograrlo, y lo intentare hasta que ya no este en mis manos, porque no estoy contigo por necesidad ni por superficialidad, estoy contigo por elección.</p>
+                              <p>Te amo mensa &hearts;.</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                  
             </div>
             <div id="pad-touch-container">
                 <img id="left" src="./style/img/direction_key.svg" alt="">
