--- a/getEm.html
+++ b/getEm.html
@@ -31,35 +31,30 @@
                 </div>
 
                 <div class="lose-container lose-1 hide">
-                    <p> You are rabies actually
-                        <br> so one drop already
-                        <br> kill you rip &#x1FAA6;
+                    <p> 
+                        You are rabies actually so one drop already kill you rip 
                     </p>
                     <button class="link-style restart" id="lose-restart">restart</button>
                     <a class="link-style" id="lose-home" href="./index.html">back to home</a>
                 </div>
 
                 <div class="lose-container lose-2 hide">
-                    <p> You caught 2 drops??!
-                        <br> That's +1 couple mandi pass
-                        <br> I can use anytime &#x1f608;
+                    <p> 
+                        2 drops? That's +1 couple mandi pass I can use anytime
                     </p>
                     <button class="link-style restart" id="lose-restart">restart</button>
                     <a class="link-style" id="lose-home" href="./index.html">back to home</a>
                 </div>
 
                 <div class="lose-container lose-3 hide">
-                    <p> Sorry you lose 
-                        <br> but I love smell of
-                        <br> clean boyfriend 
+                    <p> Mmmm I love the smell of clean boyfriend 
                     </p>
                     <button class="link-style restart" id="lose-restart">restart</button>
                     <a class="link-style" id="lose-home" href="./index.html">back to home</a>
                 </div>
 
                 <div class="lose-container lose-4 hide">
-                    <p> All this wet
-                        <br> but it's not from me &#x1f624;
+                    <p> All this wet but it's <i>not</i> from me??!
                     </p>
                     <button class="link-style restart" id="lose-restart">restart</button>
                     <a class="link-style" id="lose-home" href="./index.html">back to home</a>
@@ -67,8 +62,7 @@
 
                 <div class="lose-container lose-5 hide">
                     <p> You lost...
-                        <br> but an everything shower sometimes
-                        <br> isn't that bad &#xe418;
+                        <br> but an everything shower sometimes isn't that bad
                     </p>
                     <button class="link-style restart" id="lose-restart">restart</button>
                     <a class="link-style" id="lose-home" href="./index.html">back to home</a>
@@ -82,7 +76,7 @@
                     <button class="link-style restart" id="win-restart">i wanna play again</button>
                 </div>
                 -->
-                
+
                 <div id="win-container" class="scissors lose-container hide">
                     <div class="envelop">
                       <div class="envelop__front-paper"></div>
