--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="icon" href="./style/img/favicon.ico"/>
     <link rel="stylesheet" href="./style/style.css">
     <script type="module" src="./js/index.js"></script>
+    <script src="./js/animation.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
 </head>
 <body>  
     
