--- a/getEm.html
+++ b/getEm.html
@@ -8,6 +8,9 @@
     <link rel="icon" href="./style/img/favicon.ico"/>
     <link rel="stylesheet" href="./style/getEm.css">
     <script type="module" src="./js/getEm.js"></script>
+    <script src="./js/animation.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
 </head>
 <body>
 
@@ -19,14 +22,13 @@
                         <img src="./style/img/return-arrow.svg" alt="">
                     </div>
                 </a>
-                <p>get'em treats</p>
             </aside>
 
             <div id="game-board">
                 <div id="intro-game" class="intro-game">
-                    <p>catch all the<br>fish but avoid<br>the raindrops!</p>
+                    <p>Avoid the<br>evil mandi water!</p>
                     <img src="./style/img/Keyboard_2directions.svg" alt="">
-                    <p>use your keyboard<br>arrows to navigate</p>
+                    <p>use the keyboard<br>arrows to navigate</p>
                     <button class="link-style" id="start" href="">start</button>
                 </div>
 
@@ -40,7 +42,7 @@
 
                 <div class="lose-container lose-2 hide">
                     <p> 
-                        2 drops? That's +1 couple mandi pass I can use anytime
+                        2 drops? That's +1 couple mandi pass I can use anytime &#62;&#58;&#41;
                     </p>
                     <button class="link-style restart" id="lose-restart">restart</button>
                     <a class="link-style" id="lose-home" href="./index.html">back to home</a>
@@ -124,9 +126,9 @@
                     <button id="pause" onclick="document.getElementById('background-music').pause()"><img src="./style/img/Pause_icon.svg" alt=""></button>
                 </div>
                 <p><span>0</span>/20</p>
-                <p>treats <br>caught</p>
+                <p>fun <br>times</p>
                 <p><span>0</span>/5</p>
-                <p>raindrops <br>caught</p>
+                <p>shower <br>water</p>
             </aside>
         </div>
     </div>
