--- a/getEm.html
+++ b/getEm.html
@@ -8,7 +8,6 @@
     <link rel="icon" href="./style/img/favicon.ico"/>
     <link rel="stylesheet" href="./style/getEm.css">
     <script type="module" src="./js/getEm.js"></script>
-    <script src="./js/animation.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
 </head>
@@ -42,21 +41,21 @@
 
                 <div class="lose-container lose-2 hide">
                     <p> 
-                        2 drops? That's +1 couple mandi pass I can use anytime &#62;&#58;&#41;
+                        2 drops? That's +1 couple mandi pass I can use anytime 
                     </p>
                     <button class="link-style restart" id="lose-restart">restart</button>
                     <a class="link-style" id="lose-home" href="./index.html">back to home</a>
                 </div>
 
                 <div class="lose-container lose-3 hide">
-                    <p> Mmmm I love the smell of clean boyfriend 
+                    <p> Mmmm I win that's the smell of clean boyfriend 
                     </p>
                     <button class="link-style restart" id="lose-restart">restart</button>
                     <a class="link-style" id="lose-home" href="./index.html">back to home</a>
                 </div>
 
                 <div class="lose-container lose-4 hide">
-                    <p> All this wet but it's <i>not</i> from me??!
+                    <p> All this wet but it's not from me??!
                     </p>
                     <button class="link-style restart" id="lose-restart">restart</button>
                     <a class="link-style" id="lose-home" href="./index.html">back to home</a>
@@ -70,15 +69,6 @@
                     <a class="link-style" id="lose-home" href="./index.html">back to home</a>
                 </div>
 
-                <!--
-                <div id="win-container" class="lose-container hide">
-                    <p>Happy Valentines Day sayang mayang &#65039;
-                    </p>
-                    <a class="link-style" id="win-home" href="./index.html">go to home</a>
-                    <button class="link-style restart" id="win-restart">i wanna play again</button>
-                </div>
-                -->
-
                 <div id="win-container" class="scissors lose-container hide">
                     <div class="envelop">
                       <div class="envelop__front-paper"></div>
@@ -91,19 +81,26 @@
                           <div class="note js-note">
                             <div class="note__text">
                               <p>
-                                Hola amor, te quiero dar las gracias por todo, por las alegrías, por las risas, por los lindos momentos pero, también por los malos, porque aunque haya malos momentos...
+                                Happy Valentines Day sayang mayang &hearts; Thank you for all the dates, the trips together, 
+                                the lovey good times and (not-so-good) sticky situations that you got us out of :3
                               </p>
                             </div>
                           </div>
                           <div class="note js-note">
                             <div class="note__text">
-                              <p>quiero pasarlos contigo, luchar y superarlos juntos. La verdad eres muy importante para mi, amo lo que tenemos juntos y sé que podemos mejorar y mantenerlo si los dos queremos y créeme que yo quiero.</p>
+                              <p>
+                                You are the perfect cold to my hot, the most comfortable cuddler on lazy days,
+                                best boyfriend I could ever ask for
+                              </p>
                             </div>
                           </div>
                           <div class="note js-note">
                             <div class="note__text">
-                              <p>En verdad te amo y se que podemos lograrlo, y lo intentare hasta que ya no este en mis manos, porque no estoy contigo por necesidad ni por superficialidad, estoy contigo por elección.</p>
-                              <p>Te amo mensa &hearts;.</p>
+                              <p>
+                                I'm so lucky to call you mine, and I can't imagine being with anyone else.
+                                Yours forever and always.
+                              </p>
+                              <p>I love you.</p>
                             </div>
                           </div>
                         </div>
