--- a/getEm.html
+++ b/getEm.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="icon" href="./style/img/favicon.ico"/>
+    <title>To my dearest boyfriend</title>
+    <link rel="icon" href="./style/img/pixel-heart.png"/>
     <link rel="stylesheet" href="./style/getEm.css">
     <script type="module" src="./js/getEm.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
