--- a/getEm.html
+++ b/getEm.html
@@ -16,11 +16,11 @@
     <div class="container-all">
         <div class="container-elements">
             <aside class="left-elements">
-                <a href="./index.html">
-                    <div class="arrow-container">
-                        <img src="./style/img/return-arrow.svg" alt="">
-                    </div>
-                </a>
+                <br>
+            </aside>
+
+            <aside class="bottom-elements">
+                <p>Powered by my love for you (and ChatGPT)</p>
             </aside>
 
             <div id="game-board">
@@ -36,7 +36,6 @@
                         You are rabies actually so one drop already kill you rip 
                     </p>
                     <button class="link-style restart" id="lose-restart">restart</button>
-                    <a class="link-style" id="lose-home" href="./index.html">back to home</a>
                 </div>
 
                 <div class="lose-container lose-2 hide">
@@ -44,21 +43,18 @@
                         2 drops? That's +1 couple mandi pass I can use anytime 
                     </p>
                     <button class="link-style restart" id="lose-restart">restart</button>
-                    <a class="link-style" id="lose-home" href="./index.html">back to home</a>
                 </div>
 
                 <div class="lose-container lose-3 hide">
                     <p> Mmmm I win that's the smell of clean boyfriend 
                     </p>
                     <button class="link-style restart" id="lose-restart">restart</button>
-                    <a class="link-style" id="lose-home" href="./index.html">back to home</a>
                 </div>
 
                 <div class="lose-container lose-4 hide">
                     <p> All this wet but it's not from me??!
                     </p>
                     <button class="link-style restart" id="lose-restart">restart</button>
-                    <a class="link-style" id="lose-home" href="./index.html">back to home</a>
                 </div>
 
                 <div class="lose-container lose-5 hide">
@@ -66,7 +62,6 @@
                         <br> but an everything shower sometimes isn't that bad
                     </p>
                     <button class="link-style restart" id="lose-restart">restart</button>
-                    <a class="link-style" id="lose-home" href="./index.html">back to home</a>
                 </div>
 
                 <div id="win-container" class="scissors lose-container hide">
