--- a/getEm.html
+++ b/getEm.html
@@ -16,11 +16,11 @@
     <div class="container-all">
         <div class="container-elements">
             <aside class="left-elements">
-                <br>
-            </aside>
-
-            <aside class="bottom-elements">
-                <p>Powered by my love for you (and ChatGPT)</p>
+                <a href="./index.html">
+                    <div class="arrow-container">
+                        <p>Powered by my love for you (and ChatGPT)</p>
+                    </div>
+                </a>            
             </aside>
 
             <div id="game-board">
