--- a/getEm.html
+++ b/getEm.html
@@ -16,7 +16,7 @@
     <div class="container-all">
         <div class="container-elements">
             <aside class="left-elements">
-                <p>Powered by my love for you (and ChatGPT)</p>
+                <br> Powered by my love for you (and ChatGPT)         
             </aside>
 
             <div id="game-board">
@@ -32,7 +32,6 @@
                         You are rabies actually so one drop already kill you rip 
                     </p>
                     <button class="link-style restart" id="lose-restart">restart</button>
-                    <a class="link-style" id="lose-home" href="./index.html">back to home</a>
                 </div>
 
                 <div class="lose-container lose-2 hide">
@@ -40,21 +39,18 @@
                         2 drops? That's +1 couple mandi pass I can use anytime 
                     </p>
                     <button class="link-style restart" id="lose-restart">restart</button>
-                    <a class="link-style" id="lose-home" href="./index.html">back to home</a>
                 </div>
 
                 <div class="lose-container lose-3 hide">
                     <p> Mmmm I win that's the smell of clean boyfriend 
                     </p>
                     <button class="link-style restart" id="lose-restart">restart</button>
-                    <a class="link-style" id="lose-home" href="./index.html">back to home</a>
                 </div>
 
                 <div class="lose-container lose-4 hide">
                     <p> All this wet but it's not from me??!
                     </p>
                     <button class="link-style restart" id="lose-restart">restart</button>
-                    <a class="link-style" id="lose-home" href="./index.html">back to home</a>
                 </div>
 
                 <div class="lose-container lose-5 hide">
@@ -62,7 +58,6 @@
                         <br> but an everything shower sometimes isn't that bad
                     </p>
                     <button class="link-style restart" id="lose-restart">restart</button>
-                    <a class="link-style" id="lose-home" href="./index.html">back to home</a>
                 </div>
 
                 <div id="win-container" class="scissors lose-container hide">
