--- a/getEm.html
+++ b/getEm.html
@@ -16,7 +16,7 @@
     <div class="container-all">
         <div class="container-elements">
             <aside class="left-elements">
-                <br> Powered by my love for you (and ChatGPT)         
+                <p> Powered by my love for you (and ChatGPT) </p>       
             </aside>
 
             <div id="game-board">
