pls its just words

--- a/getEm.html
+++ b/getEm.html
@@ -16,7 +16,11 @@
     <div class="container-all">
         <div class="container-elements">
             <aside class="left-elements">
-                <p> Powered by my love for you (and ChatGPT) </p>       
+                <br>       
+            </aside>
+
+            <aside class="bottom-elements">
+                <br> Powered by my love for you (and ChatGPT)
             </aside>
 
             <div id="game-board">
