--- a/getEm.html
+++ b/getEm.html
@@ -76,24 +76,25 @@
                           <div class="note js-note">
                             <div class="note__text">
                               <p>
-                                Happy Valentines Day sayang mayang &hearts; Thank you for all the dates, the trips together, 
-                                the lovey good times and (not-so-good) sticky situations that you got us out of :3
+                                Happy Valentines Day sayang mayang &hearts; <br>
+                                Thank you for all the dates, the trips together, 
+                                the lovey good times and the (not-so-good) sticky situations 
+                                that you got us out of hehe
                               </p>
                             </div>
                           </div>
                           <div class="note js-note">
                             <div class="note__text">
                               <p>
-                                You are the perfect cold to my hot, the most comfortable cuddler on lazy days,
-                                best boyfriend I could ever ask for
+                                You are the perfect cold to my hot, the most comfort baring cuddler, the one that
+                                heals me, indulges me (and occasionally marah me) best boyfriend I could ever have.
                               </p>
                             </div>
                           </div>
                           <div class="note js-note">
                             <div class="note__text">
                               <p>
-                                I'm so lucky to call you mine, and I can't imagine being with anyone else.
-                                Yours forever and always.
+                                Being with you always feels like home. Thank you for being exactly who you are. 
                               </p>
                               <p>I love you.</p>
                             </div>
