--- a/getEm.html
+++ b/getEm.html
@@ -25,7 +25,7 @@
 
             <div id="game-board">
                 <div id="intro-game" class="intro-game">
-                    <p>Avoid the<br>evil mandi water!</p>
+                    <p>Catch the dates<br>and avoid the<br>evil mandi water!</p>
                     <img src="./style/img/Keyboard_2directions.svg" alt="">
                     <p>use the keyboard<br>arrows to navigate</p>
                     <button class="link-style" id="start" href="">start</button>
@@ -87,7 +87,8 @@
                             <div class="note__text">
                               <p>
                                 You are the perfect cold to my hot, the most comfort baring cuddler, the one that
-                                heals me, indulges me (and occasionally marah me) best boyfriend I could ever have.
+                                heals me, indulges me, (and occasionally marahs me) best boyfriend that
+                                I could ever ask for
                               </p>
                             </div>
                           </div>
