--- a/getEm.html
+++ b/getEm.html
@@ -20,7 +20,7 @@
             </aside>
 
             <aside class="bottom-elements">
-                <br> Powered by my love for you (and ChatGPT)
+                <br> Powered by my love for you (and some ChatGPT)
             </aside>
 
             <div id="game-board">
