--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <span>cat</span>
                 <span>snake</span>
             </a>
-            <a id="get-em-btn" class="button-container btn-arrow" href="./getEm.html">
+            <a id="get-em-btn" class="button-container btn-arrow" href="./iloooyouuu.html">
                 <div id="dominated" class="bossed hide">
                     <img src="./style/img/bossdit.svg" alt="crown because you won catSnake game">
                     <p>dominated</p>
