--- a/iloooyouuu.html
+++ b/iloooyouuu.html
@@ -88,7 +88,7 @@
                               <p>
                                 You are the perfect cold to my hot, the most comfort baring cuddler, the one that
                                 heals me, indulges me, (and occasionally marahs me) best boyfriend that
-                                I could ever ask for
+                                I could ever ask for.
                               </p>
                             </div>
                           </div>
