--- a/iloooyouuu.html
+++ b/iloooyouuu.html
@@ -95,7 +95,7 @@
                           <div class="note js-note">
                             <div class="note__text">
                               <p>
-                                Being with you always feels like home. Thank you for being exactly who you are. 
+                                Being with you always feels like home. So thank you for being exactly who you are. 
                               </p>
                               <p>I love you.</p>
                             </div>
