notes to my lover

--- a/iloooyouuu.html
+++ b/iloooyouuu.html
@@ -79,7 +79,17 @@
                                 Happy Valentines Day sayang mayang &hearts; <br>
                                 Thank you for all the dates, the trips together, 
                                 the lovey good times and the (not-so-good) sticky situations 
-                                that you got us out of hehe
+                                that you always get us out of hehe
+                              </p>
+                            </div>
+                          </div>
+                          <div class="note js-note">
+                            <div class="note__text">
+                              <p>
+                                Being with you feels like home (so when are we moving in together pleease)
+                                and I'm recharged just by your presence itself. 
+                                <br> Every moment with you goes by too fast,
+                                but at the end of the day, I always feel so full of your c- love •ᴗ•
                               </p>
                             </div>
                           </div>
@@ -88,14 +98,7 @@
                               <p>
                                 You are the perfect cold to my hot, the most comfort baring cuddler, the one that
                                 heals me, indulges me, (and occasionally marahs me) best boyfriend that
-                                I could ever ask for.
-                              </p>
-                            </div>
-                          </div>
-                          <div class="note js-note">
-                            <div class="note__text">
-                              <p>
-                                Being with you always feels like home. So thank you for being exactly who you are. 
+                                I could ever ask for. Thank you for being exactly who you are. 
                               </p>
                               <p>I love you.</p>
                             </div>
