message to my lover

--- a/iloooyouuu.html
+++ b/iloooyouuu.html
@@ -98,7 +98,8 @@
                               <p>
                                 You are the perfect cold to my hot, the most comfort baring cuddler, the one that
                                 heals me, indulges me, (and occasionally marahs me) best boyfriend that
-                                I could ever ask for. Thank you for being exactly who you are. 
+                                I could ever ask for. 
+                                <br> Thank you for being exactly who you are. 
                               </p>
                               <p>I love you.</p>
                             </div>
